gcc/testsuite/gdc.test/compilable/imports/test18771a.d
module imports.test18771a;

void foo(int) {}
