gcc/testsuite/gdc.test/fail_compilation/imports/dip22e.d
module imports.dip22e;

public struct Foo {}
public void bar(int) {}
